Added authentication guard for routes, Adding sessions

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="src/styles/components.css" />
         <link rel="icon" href="/src/assets/icons/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vite + React</title>
+        <title>Login</title>
     </head>
     <body>
         <div id="root"></div>
