Started coding the front end, finished navbar

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <link rel="stylesheet" href="src/styles/components.css" />
         <link rel="icon" href="/src/assets/icons/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Login</title>
+        <title>Xceed</title>
     </head>
-    <body>
+    <body class="light">
         <div id="root"></div>
         <script type="module" src="/src/Main.tsx"></script>
     </body>
